<resources>
    <string name="app_name" translatable="false">Audio Recorder</string>

    <string name="english" translatable="false">English</string>
    <string name="french" translatable="false">French</string>
    <string name="portuguese" translatable="false">Portuguese</string>
    <string name="spanish" translatable="false">Spanish</string>
    <string name="german" translatable="false">German</string>
    <string name="hindi" translatable="false">Hindi</string>
    <string name="indonesia" translatable="false">Indonesia</string>
    <string name="china" translatable="false">China</string>

    <string name="Send_Email">Send Email</string>
    <string name="There_is_no">There is no</string>
    <string name="thank_you">Thank you</string>
    <string name="rate_us">Rate us</string>
    <string name="not_now">Not now</string>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="your_opinion_matter_to_us">Your opinion matter to us</string>
    <string name="if_you_enjoy_this_know_your_device_would_you_mind_rating_us_on_the_google_play_then">If you enjoy this Audio Recorder, would \nyou mind rating us on the Google Play, then?</string>

    <string name="start">Start</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="more_apps">More Apps</string>
    <string name="about">About</string>
    <string name="privacy_policy"><u>Privacy Policy.</u></string>
    <string name="version">Version</string>
    <string name="next">Next</string>
    <string name="confirm_quit">Confirm Quit</string>
    <string name="are_you_sure_want_to_delete_all_calls_scheduled">Are you sure want to delete all calls scheduled?</string>
    <string name="quit">Quit</string>
    <string name="cancel">Cancel</string>

    <string name="title_intro_01">Record Audio</string>
    <string name="title_intro_02">TAudio Player</string>
    <string name="title_intro_03">Search Audio</string>
    <string name="agree">Agree</string>
    <string name="permission">Permission</string>
    <string name="grant_these_permissions_to_use_app_name">Grant these permissions to use \'Audio Recorder\'</string>
    <string name="camera">Camera</string>
    <string name="storage">Storage</string>
    <string name="note_you_can_also_give_permissions_in_settings_apps_app_name_permissions">Note: You can also give permissions in Settings —> apps —> Audio Recorder —>Permissions</string>
    <string name="change_date_amp_time_format"><![CDATA[Change date & time format]]></string>
    <string name="permission_alert">Permission Alert!</string>
    <string name="some_functions_will_not_work_properly_if_you_do_not_enable_all_permission">Some functions will not work properly if you do not enable all permission.</string>
    <string name="ok">Ok</string>
    <string name="permission_required">Permission Required</string>
    <string name="allow_audio_recorder_to_read_external_storage_to_work_properly">Allow Audio Recorder to Read External Storage to work properly.</string>
    <string name="continuee">Continue</string>
    <string name="read_external_storage">Read External Storage</string>
    <string name="record">Record</string>
    <string name="player">Player</string>


</resources>