<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:fontFamily="@font/be_vietnam_pro_500"
                android:gravity="center"
                android:singleLine="true"
                android:includeFontPadding="false"
                android:text="@string/permission_alert"
                android:textColor="@color/color_3A5EA3"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:fontFamily="@font/be_vietnam_pro_400"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/some_functions_will_not_work_properly_if_you_do_not_enable_all_permission"
                android:textColor="@color/color_3A5EA3"
                android:textSize="@dimen/_12ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_26sdp"
                android:layout_marginHorizontal="@dimen/_26sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_per_alert_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_13sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_cad6ec_31"
                    android:ellipsize="end"
                    android:paddingVertical="@dimen/_8sdp"
                    android:fontFamily="@font/be_vietnam_pro_600"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:text="@string/cancel"
                    android:textColor="@color/color_3A5EA3"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/tv_per_alert_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_fc4184_31"
                    android:ellipsize="end"
                    android:paddingVertical="@dimen/_8sdp"
                    android:fontFamily="@font/be_vietnam_pro_600"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:text="@string/ok"
                    android:textColor="@color/color_FCFCFC"
                    android:textSize="@dimen/_11ssp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>