<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_FFFFFF">

    <RelativeLayout
        android:id="@+id/view_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginVertical="@dimen/_10sdp"
            android:fontFamily="@font/be_vietnam_pro_500"
            android:paddingTop="@dimen/_2sdp"
            android:text="@string/permission_required"
            android:textColor="@color/color_3A5EA3"
            android:textSize="@dimen/_16ssp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/view_center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_top">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/be_vietnam_pro_400"
            android:includeFontPadding="false"
            android:text="@string/allow_audio_recorder_to_read_external_storage_to_work_properly"
            android:textColor="@color/color_3A5EA3"
            android:textSize="@dimen/_12ssp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/ic_lang_sn"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_12sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_toStartOf="@id/iv_switch_read_per"
                android:ellipsize="end"
                android:fontFamily="@font/be_vietnam_pro_600"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/read_external_storage"
                android:textColor="@color/color_3A5EA3"
                android:textSize="@dimen/_11ssp" />

            <ImageView
                android:id="@+id/iv_switch_read_per"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_switch_sn" />
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_28sdp"
        android:fontFamily="@font/be_vietnam_pro_600"
        android:includeFontPadding="false"
        android:padding="@dimen/_3sdp"
        android:text="@string/continuee"
        android:textAllCaps="true"
        android:textColor="@color/color_FC4184"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@+id/view_center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
