<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app">

    <RelativeLayout
        android:id="@+id/view_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingHorizontal="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginVertical="@dimen/_10sdp"
            android:fontFamily="@font/be_vietnam_pro_500"
            android:includeFontPadding="false"
            android:paddingTop="@dimen/_2sdp"
            android:text="@string/about"
            android:textColor="@color/color_3A5EA3"
            android:textSize="@dimen/_16ssp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/img_logo_app"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/_60sdp"
        android:padding="@dimen/_3sdp"
        android:src="@drawable/img_logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_top" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/version"
        android:textColor="@color/color_3A5EA3"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/be_vietnam_pro_400"
        android:includeFontPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo_app" />

    <TextView
        android:id="@+id/btn_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/privacy_policy"
        android:textColor="@color/color_FC4184"
        android:textSize="@dimen/_11ssp"
        android:fontFamily="@font/be_vietnam_pro_600"
        android:includeFontPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_version" />
</androidx.constraintlayout.widget.ConstraintLayout>