<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app">


    <RelativeLayout
        android:id="@+id/view_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingHorizontal="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginVertical="@dimen/_10sdp"
            android:fontFamily="@font/be_vietnam_pro_500"
            android:includeFontPadding="false"
            android:paddingTop="@dimen/_2sdp"
            android:text="@string/setting"
            android:textColor="@color/color_3A5EA3"
            android:textSize="@dimen/_16ssp" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/_12sdp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/img_lang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_lang"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/be_vietnam_pro_400"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:text="@string/language"
                    android:textColor="@color/color_3A5EA3"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_lang"
                    app:layout_constraintStart_toEndOf="@+id/img_lang"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_lang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_13sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/be_vietnam_pro_600"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:text="@string/english"
                    android:textColor="@color/color_3A5EA3"
                    android:textSize="@dimen/_11sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/img_lang_arrow"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageView
                    android:id="@+id/img_lang_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/line_rate"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/_6sdp"
                android:background="#CAD6EC" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/img_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_rate"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_13sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/be_vietnam_pro_400"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:text="@string/rate"
                    android:textColor="@color/color_3A5EA3"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_rate"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/_6sdp"
                android:background="#CAD6EC" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/img_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_share"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_13sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/be_vietnam_pro_400"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:text="@string/share"
                    android:textColor="@color/color_3A5EA3"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_share"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/_6sdp"
                android:background="#CAD6EC" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/img_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_about"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_13sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/be_vietnam_pro_400"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:text="@string/about"
                    android:textColor="@color/color_3A5EA3"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/img_about_arrow"
                    app:layout_constraintStart_toEndOf="@+id/img_about"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img_about_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/_6sdp"
                android:background="#CAD6EC" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/img_calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_calendar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_13sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/be_vietnam_pro_400"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:text="@string/change_date_amp_time_format"
                    android:textColor="@color/color_3A5EA3"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/img_calendar_arrow"
                    app:layout_constraintStart_toEndOf="@+id/img_calendar"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img_calendar_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>